# m-verify

./: .dockerignore  .env.example  .env.nginx.example  .env.production.example  .gitignore  README.md  build-windows-packages.ps1  docker-compose.nginx.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/admin/: Dockerfile  index.html  nginx.conf  package.json
apps/admin/public/: download.html  privacy.html
apps/admin/src/: App.tsx  Logo.tsx  api.ts  styles.css
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/src/: app.ts  config.ts  constants.ts  db.ts  http.ts  server.ts  types.ts
apps/desktop/: index.html  package.json
apps/desktop/scripts/: build-msix.ps1
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/msix/: AppxManifest.template.xml
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: capacitor.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
database/: schema.sql
database/docker-init/: 002_localhost_user.sql
database/migrations/: 001_schema.sql  002_mpesa_payment_method.sql  003_drop_mpesa_callback_secrets.sql  004_user_module_permissions.sql  005_stk_prompt_requests.sql  006_correct_daraja_payment_times.sql  007_payment_bill_number.sql
database/seeds/: 001_demo_payments.sql
deploy/: Caddyfile
deploy/nginx/: m-verify.theleasemaster.com.conf
docs/: deployment.md  microsoft-store.md  sample-requests.http  vps-nginx-deployment.md
(+46 files in other folders)
